rehaciendo practicas de java y terminando prac 5 de .net